Name: Waltz
Version: 0.0
Cabal-Version: >= 1.2
License: BSD3
Author: Iain McCoy
Synopsis: The deranged blatherings of a madman
Build-Type: Simple

Executable waltz
  Hs-Source-Dirs: src
  Main-Is: Main.hs
  Extensions: ExistentialQuantification,
              FlexibleInstances,
              FlexibleContexts,
              GADTs,
              MultiParamTypeClasses,
              OverloadedStrings,
              ScopedTypeVariables,
              TupleSections,
              ViewPatterns
  build-depends: base, containers, text, safe, mtl
  ghc-options: -Werror -fwarn-unused-imports
