Name: waltz
Version: 0.0
Cabal-Version: >= 1.8
License: BSD3
Author: Iain McCoy
Synopsis: The deranged blatherings of a madman
Build-Type: Simple

library
  Hs-Source-Dirs: src/main
  Extensions: ExistentialQuantification,
              FlexibleInstances,
              MultiParamTypeClasses,
              OverloadedStrings,
              GADTs,
              ScopedTypeVariables,
              TupleSections,
              ViewPatterns
  exposed-modules: Waltz
  build-depends: base, containers, text, safe, mtl
  ghc-options: -Werror -fwarn-unused-imports


executable demo
  Hs-Source-Dirs: src/demo
  Main-Is: Main.hs
  Extensions: ExistentialQuantification,
              FlexibleInstances,
              FlexibleContexts,
              GADTs,
              MultiParamTypeClasses,
              OverloadedStrings,
              ScopedTypeVariables,
              TupleSections,
              ViewPatterns
  build-depends: waltz, base, containers, text, safe, mtl
  ghc-options: -Werror -fwarn-unused-imports

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  Extensions: ScopedTypeVariables
  build-depends:
      base >= 4 && < 5
    , containers
    , mtl
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , text
    , waltz

